# SiftGPU

./: CMakeLists.txt  batchSift.sh  dirmatch.py
src/SiftGPU/: CLTexImage.cpp  ProgramCL.cpp  SiftFileLoader.cpp
src/TestWin/: BasicTestWin.cpp  MatchConsole.cpp  SiftAndMatch.cpp  SiftConsole.cpp  SiftConsole.h
